--- a/assignment1.1.html
+++ b/assignment1.1.html
@@ -48,7 +48,7 @@
         <li>Dog</li>
         <li>Cat</li>
     </ul>
-    <h5>Almost the End</h5>
+    <h5>Almost the End</h5><br>
     <h6>The End</h6>
 
 </body>
